welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: reassignment to val
    droite = false
           ^ZigZag:20: error: value ! is not a member of Boolean
  else if((getX()==0)&&(droite!))
                              ^ZigZag:23: error: reassignment to val
    droite = true
           ^